mrlangParser.py
# Generated from mrlang.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class mrlangParser ( Parser ):

    grammarFileName = "mrlang.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'('", "')'", "';'", "'schetnoe'", "'slovesnoe'", 
                     "'dvoyakoe'", "'povedati'", "'startuem'", "'konchaem'", 
                     "'ezheli'", "'inakoezheli'", "'inako'", "'dokole'", 
                     "'krugoverty'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'*'", "'/'", "'+'", "'-'", "'='", "'=='", "'!='", 
                     "'<'", "'&&'", "'||'", "'<='", "'>'", "'>='" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "NUM", "BOOL", 
                      "STRING", "MUL", "SLASH", "PLUS", "MINUS", "ASSIGN", 
                      "EQUAL", "NOT_EQUAL", "LESS", "AND", "OR", "LESS_OR_EQUAL", 
                      "GREATER", "GREATER_OR_EQUAL", "ID", "SPACE", "LINE_COMMENT", 
                      "MULTILINE_COMMENT" ]

    RULE_program = 0
    RULE_stmt = 1
    RULE_expr = 2
    RULE_varDecl = 3
    RULE_rawVarDecl = 4
    RULE_filledVarDecl = 5
    RULE_typeName = 6
    RULE_assignment = 7
    RULE_rawAssigment = 8
    RULE_idName = 9
    RULE_numParsed = 10
    RULE_stringParsed = 11
    RULE_boolParsed = 12
    RULE_aritOperator = 13
    RULE_compOperator = 14
    RULE_print = 15
    RULE_blockstmt = 16
    RULE_ifstmt = 17
    RULE_elifstmt = 18
    RULE_elsestmt = 19
    RULE_whilestmt = 20
    RULE_forstmt = 21

    ruleNames =  [ "program", "stmt", "expr", "varDecl", "rawVarDecl", "filledVarDecl", 
                   "typeName", "assignment", "rawAssigment", "idName", "numParsed", 
                   "stringParsed", "boolParsed", "aritOperator", "compOperator", 
                   "print", "blockstmt", "ifstmt", "elifstmt", "elsestmt", 
                   "whilestmt", "forstmt" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    NUM=15
    BOOL=16
    STRING=17
    MUL=18
    SLASH=19
    PLUS=20
    MINUS=21
    ASSIGN=22
    EQUAL=23
    NOT_EQUAL=24
    LESS=25
    AND=26
    OR=27
    LESS_OR_EQUAL=28
    GREATER=29
    GREATER_OR_EQUAL=30
    ID=31
    SPACE=32
    LINE_COMMENT=33
    MULTILINE_COMMENT=34

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(mrlangParser.EOF, 0)

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(mrlangParser.StmtContext)
            else:
                return self.getTypedRuleContext(mrlangParser.StmtContext,i)


        def getRuleIndex(self):
            return mrlangParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = mrlangParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 47
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 2147509744) != 0):
                self.state = 44
                self.stmt()
                self.state = 49
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 50
            self.match(mrlangParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varDecl(self):
            return self.getTypedRuleContext(mrlangParser.VarDeclContext,0)


        def assignment(self):
            return self.getTypedRuleContext(mrlangParser.AssignmentContext,0)


        def print_(self):
            return self.getTypedRuleContext(mrlangParser.PrintContext,0)


        def ifstmt(self):
            return self.getTypedRuleContext(mrlangParser.IfstmtContext,0)


        def blockstmt(self):
            return self.getTypedRuleContext(mrlangParser.BlockstmtContext,0)


        def whilestmt(self):
            return self.getTypedRuleContext(mrlangParser.WhilestmtContext,0)


        def forstmt(self):
            return self.getTypedRuleContext(mrlangParser.ForstmtContext,0)


        def getRuleIndex(self):
            return mrlangParser.RULE_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmt" ):
                listener.enterStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmt" ):
                listener.exitStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmt" ):
                return visitor.visitStmt(self)
            else:
                return visitor.visitChildren(self)




    def stmt(self):

        localctx = mrlangParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_stmt)
        try:
            self.state = 59
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [4, 5, 6]:
                self.enterOuterAlt(localctx, 1)
                self.state = 52
                self.varDecl()
                pass
            elif token in [31]:
                self.enterOuterAlt(localctx, 2)
                self.state = 53
                self.assignment()
                pass
            elif token in [7]:
                self.enterOuterAlt(localctx, 3)
                self.state = 54
                self.print_()
                pass
            elif token in [10]:
                self.enterOuterAlt(localctx, 4)
                self.state = 55
                self.ifstmt()
                pass
            elif token in [8]:
                self.enterOuterAlt(localctx, 5)
                self.state = 56
                self.blockstmt()
                pass
            elif token in [13]:
                self.enterOuterAlt(localctx, 6)
                self.state = 57
                self.whilestmt()
                pass
            elif token in [14]:
                self.enterOuterAlt(localctx, 7)
                self.state = 58
                self.forstmt()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(mrlangParser.ExprContext)
            else:
                return self.getTypedRuleContext(mrlangParser.ExprContext,i)


        def MINUS(self):
            return self.getToken(mrlangParser.MINUS, 0)

        def numParsed(self):
            return self.getTypedRuleContext(mrlangParser.NumParsedContext,0)


        def boolParsed(self):
            return self.getTypedRuleContext(mrlangParser.BoolParsedContext,0)


        def idName(self):
            return self.getTypedRuleContext(mrlangParser.IdNameContext,0)


        def stringParsed(self):
            return self.getTypedRuleContext(mrlangParser.StringParsedContext,0)


        def aritOperator(self):
            return self.getTypedRuleContext(mrlangParser.AritOperatorContext,0)


        def compOperator(self):
            return self.getTypedRuleContext(mrlangParser.CompOperatorContext,0)


        def getRuleIndex(self):
            return mrlangParser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr" ):
                return visitor.visitExpr(self)
            else:
                return visitor.visitChildren(self)



    def expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = mrlangParser.ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 4
        self.enterRecursionRule(localctx, 4, self.RULE_expr, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 72
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1]:
                self.state = 62
                self.match(mrlangParser.T__0)
                self.state = 63
                self.expr(0)
                self.state = 64
                self.match(mrlangParser.T__1)
                pass
            elif token in [21]:
                self.state = 66
                self.match(mrlangParser.MINUS)
                self.state = 67
                self.numParsed()
                pass
            elif token in [16]:
                self.state = 68
                self.boolParsed()
                pass
            elif token in [31]:
                self.state = 69
                self.idName()
                pass
            elif token in [15]:
                self.state = 70
                self.numParsed()
                pass
            elif token in [17]:
                self.state = 71
                self.stringParsed()
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 84
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,4,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 82
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
                    if la_ == 1:
                        localctx = mrlangParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 74
                        if not self.precpred(self._ctx, 7):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 7)")
                        self.state = 75
                        self.aritOperator()
                        self.state = 76
                        self.expr(8)
                        pass

                    elif la_ == 2:
                        localctx = mrlangParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 78
                        if not self.precpred(self._ctx, 6):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 6)")
                        self.state = 79
                        self.compOperator()
                        self.state = 80
                        self.expr(7)
                        pass

             
                self.state = 86
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class VarDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def rawVarDecl(self):
            return self.getTypedRuleContext(mrlangParser.RawVarDeclContext,0)


        def filledVarDecl(self):
            return self.getTypedRuleContext(mrlangParser.FilledVarDeclContext,0)


        def getRuleIndex(self):
            return mrlangParser.RULE_varDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarDecl" ):
                listener.enterVarDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarDecl" ):
                listener.exitVarDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarDecl" ):
                return visitor.visitVarDecl(self)
            else:
                return visitor.visitChildren(self)




    def varDecl(self):

        localctx = mrlangParser.VarDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_varDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.state = 87
                self.rawVarDecl()
                pass

            elif la_ == 2:
                self.state = 88
                self.filledVarDecl()
                pass


            self.state = 91
            self.match(mrlangParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RawVarDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typeName(self):
            return self.getTypedRuleContext(mrlangParser.TypeNameContext,0)


        def idName(self):
            return self.getTypedRuleContext(mrlangParser.IdNameContext,0)


        def getRuleIndex(self):
            return mrlangParser.RULE_rawVarDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRawVarDecl" ):
                listener.enterRawVarDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRawVarDecl" ):
                listener.exitRawVarDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRawVarDecl" ):
                return visitor.visitRawVarDecl(self)
            else:
                return visitor.visitChildren(self)




    def rawVarDecl(self):

        localctx = mrlangParser.RawVarDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_rawVarDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self.typeName()
            self.state = 94
            self.idName()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FilledVarDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typeName(self):
            return self.getTypedRuleContext(mrlangParser.TypeNameContext,0)


        def idName(self):
            return self.getTypedRuleContext(mrlangParser.IdNameContext,0)


        def ASSIGN(self):
            return self.getToken(mrlangParser.ASSIGN, 0)

        def expr(self):
            return self.getTypedRuleContext(mrlangParser.ExprContext,0)


        def getRuleIndex(self):
            return mrlangParser.RULE_filledVarDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFilledVarDecl" ):
                listener.enterFilledVarDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFilledVarDecl" ):
                listener.exitFilledVarDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFilledVarDecl" ):
                return visitor.visitFilledVarDecl(self)
            else:
                return visitor.visitChildren(self)




    def filledVarDecl(self):

        localctx = mrlangParser.FilledVarDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_filledVarDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            self.typeName()
            self.state = 97
            self.idName()
            self.state = 98
            self.match(mrlangParser.ASSIGN)
            self.state = 99
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeNameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return mrlangParser.RULE_typeName

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTypeName" ):
                listener.enterTypeName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTypeName" ):
                listener.exitTypeName(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTypeName" ):
                return visitor.visitTypeName(self)
            else:
                return visitor.visitChildren(self)




    def typeName(self):

        localctx = mrlangParser.TypeNameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_typeName)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 112) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def rawAssigment(self):
            return self.getTypedRuleContext(mrlangParser.RawAssigmentContext,0)


        def getRuleIndex(self):
            return mrlangParser.RULE_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignment" ):
                return visitor.visitAssignment(self)
            else:
                return visitor.visitChildren(self)




    def assignment(self):

        localctx = mrlangParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_assignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 103
            self.rawAssigment()
            self.state = 104
            self.match(mrlangParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RawAssigmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(mrlangParser.ID, 0)

        def ASSIGN(self):
            return self.getToken(mrlangParser.ASSIGN, 0)

        def expr(self):
            return self.getTypedRuleContext(mrlangParser.ExprContext,0)


        def getRuleIndex(self):
            return mrlangParser.RULE_rawAssigment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRawAssigment" ):
                listener.enterRawAssigment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRawAssigment" ):
                listener.exitRawAssigment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRawAssigment" ):
                return visitor.visitRawAssigment(self)
            else:
                return visitor.visitChildren(self)




    def rawAssigment(self):

        localctx = mrlangParser.RawAssigmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_rawAssigment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self.match(mrlangParser.ID)
            self.state = 107
            self.match(mrlangParser.ASSIGN)
            self.state = 108
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdNameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(mrlangParser.ID, 0)

        def getRuleIndex(self):
            return mrlangParser.RULE_idName

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIdName" ):
                listener.enterIdName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIdName" ):
                listener.exitIdName(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdName" ):
                return visitor.visitIdName(self)
            else:
                return visitor.visitChildren(self)




    def idName(self):

        localctx = mrlangParser.IdNameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_idName)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            self.match(mrlangParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NumParsedContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUM(self):
            return self.getToken(mrlangParser.NUM, 0)

        def getRuleIndex(self):
            return mrlangParser.RULE_numParsed

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNumParsed" ):
                listener.enterNumParsed(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNumParsed" ):
                listener.exitNumParsed(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNumParsed" ):
                return visitor.visitNumParsed(self)
            else:
                return visitor.visitChildren(self)




    def numParsed(self):

        localctx = mrlangParser.NumParsedContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_numParsed)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self.match(mrlangParser.NUM)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StringParsedContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(mrlangParser.STRING, 0)

        def getRuleIndex(self):
            return mrlangParser.RULE_stringParsed

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStringParsed" ):
                listener.enterStringParsed(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStringParsed" ):
                listener.exitStringParsed(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStringParsed" ):
                return visitor.visitStringParsed(self)
            else:
                return visitor.visitChildren(self)




    def stringParsed(self):

        localctx = mrlangParser.StringParsedContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_stringParsed)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 114
            self.match(mrlangParser.STRING)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BoolParsedContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BOOL(self):
            return self.getToken(mrlangParser.BOOL, 0)

        def getRuleIndex(self):
            return mrlangParser.RULE_boolParsed

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBoolParsed" ):
                listener.enterBoolParsed(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBoolParsed" ):
                listener.exitBoolParsed(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBoolParsed" ):
                return visitor.visitBoolParsed(self)
            else:
                return visitor.visitChildren(self)




    def boolParsed(self):

        localctx = mrlangParser.BoolParsedContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_boolParsed)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            self.match(mrlangParser.BOOL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AritOperatorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PLUS(self):
            return self.getToken(mrlangParser.PLUS, 0)

        def MINUS(self):
            return self.getToken(mrlangParser.MINUS, 0)

        def MUL(self):
            return self.getToken(mrlangParser.MUL, 0)

        def SLASH(self):
            return self.getToken(mrlangParser.SLASH, 0)

        def getRuleIndex(self):
            return mrlangParser.RULE_aritOperator

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAritOperator" ):
                listener.enterAritOperator(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAritOperator" ):
                listener.exitAritOperator(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAritOperator" ):
                return visitor.visitAritOperator(self)
            else:
                return visitor.visitChildren(self)




    def aritOperator(self):

        localctx = mrlangParser.AritOperatorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_aritOperator)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 3932160) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CompOperatorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LESS(self):
            return self.getToken(mrlangParser.LESS, 0)

        def LESS_OR_EQUAL(self):
            return self.getToken(mrlangParser.LESS_OR_EQUAL, 0)

        def EQUAL(self):
            return self.getToken(mrlangParser.EQUAL, 0)

        def NOT_EQUAL(self):
            return self.getToken(mrlangParser.NOT_EQUAL, 0)

        def GREATER(self):
            return self.getToken(mrlangParser.GREATER, 0)

        def GREATER_OR_EQUAL(self):
            return self.getToken(mrlangParser.GREATER_OR_EQUAL, 0)

        def AND(self):
            return self.getToken(mrlangParser.AND, 0)

        def OR(self):
            return self.getToken(mrlangParser.OR, 0)

        def getRuleIndex(self):
            return mrlangParser.RULE_compOperator

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCompOperator" ):
                listener.enterCompOperator(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCompOperator" ):
                listener.exitCompOperator(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCompOperator" ):
                return visitor.visitCompOperator(self)
            else:
                return visitor.visitChildren(self)




    def compOperator(self):

        localctx = mrlangParser.CompOperatorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_compOperator)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 2139095040) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrintContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(mrlangParser.ExprContext,0)


        def getRuleIndex(self):
            return mrlangParser.RULE_print

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrint" ):
                listener.enterPrint(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrint" ):
                listener.exitPrint(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrint" ):
                return visitor.visitPrint(self)
            else:
                return visitor.visitChildren(self)




    def print_(self):
